# ITCS_2

./: .gitignore
ClassExcercise/ClassExcercise1/: q1.cpp  q2.cpp
ClassExcercise/ClassExcercise1_A/: q1.cpp  q2.cpp
ClassExcercise/ClassExcercise4/: q1.c
ClassExcercise/ClassExcercise5/: q1.c
ClassExcercise/ClassExcercise6/: q1.c
ClassExcercise/ClassExcercise7/: q1.c
HomeExcercise/: RomeFunc.txt  RomeFunc2.txt
HomeExcercise/HomeExcercise1/: excercise1A.c  excercise1A1.c  excercise1B.c  excercise2.c
HomeExcercise/HomeExcercise2/: mergsort.cp  q1a.c  q1b.c  q2.c  q3.c  q4.c
HomeExcercise/HomeExcercise3/: 2a.c  2b.c  2c.c  2d.c  3a.c  3b.c  3c.c  3d.c  3e  3e.c  q1.c
HomeExcercise/HomeExcercise4/: m1.c  m2.c  m3.c  q1.c  q2.c  q2_t.c\  q3.c
HomeExcercise/HomeExcercise4/question2/: CMakeLists.txt  checkString.c  checkString.h  main.c  tree.c  tree.h
HomeExcercise/HomeExcercise4/question3/: list.c  main.c  tree.c
Lesson/: q1.cpp
Marathon/: q1.c  q2  q2.c  q3  q3.c  q4.c  q4_A.c
Material/: calloc.c  malloc.c  mergeSort.txt  realloc.c  str_arr.c
Template/: q1.cpp
